# FuseFileSystemBoC

./: .gitmodules  Block.cpp  Block.h  CMakeLists.txt  DirInode.cpp  DirInode.h  FileSystem.cpp  FileSystem.h  Inode.cpp  Inode.h  README.md  RegInode.cpp  RegInode.h  main.cpp  my_fuse_loop.cpp  my_fuse_loop.h  run.sh
plotMachineIOPS_LATENCY/: README.md  generate_configure_file.py  out.hup  parse_fio_output.py  parse_results.py  randread-8jobs-4files-4k.fio.out  randwrite-8jobs-4files-4k.fio.out  read-8jobs-4files-4k.fio  read-8jobs-4files-4k.fio.out  write-8jobs-4files-4k.fio  write-8jobs-4files-4k.fio.out
plot_iops/: README.md
plot_metadata/: 8192_files_16_jobs_filecreate__iops.pkl  8192_files_1_jobs_4k_1G_latency.pkl  8192_files_1_jobs_filecreate__iops.pkl  README.MD  filecreate-16jobs-1files-4k.fio  filecreate-16jobs-1files-4k.fio_fuse_boc_1G.json  filecreate-16jobs-1files-4k.fio_fuse_ext4_1G.json  filecreate-16jobs-1files-4k.fio_ramdisk_1G.json  filecreate-16jobs-1files-4k.fio_tmpfs_1G.json  filecreate-1jobs-1files-4k.fio  filecreate-1jobs-1files-4k.fio_fuse_boc_1G.json  filecreate-1jobs-1files-4k.fio_fuse_ext4_1G.json  filecreate-1jobs-1files-4k.fio_ramdisk_1G.json  filecreate-1jobs-1files-4k.fio_tmpfs_1G.json  filecreate-32jobs-1files-4k.fio  filecreate-32jobs-1files-4k.fio_fuse_boc_1G.json  filecreate-32jobs-1files-4k.fio_fuse_ext4_1G.json  filecreate-32jobs-1files-4k.fio_ramdisk_1G.json  filecreate-32jobs-1files-4k.fio_tmpfs_1G.json  filedelete-32jobs-8192files-4k.fio  filestat-16jobs-1files-4k.fio  filestat-16jobs-1files-4k.fio_fuse_boc_1G.json  filestat-16jobs-1files-4k.fio_fuse_ext4_1G.json  filestat-16jobs-1files-4k.fio_ramdisk_1G.json  filestat-16jobs-1files-4k.fio_tmpfs_1G.json  filestat-1jobs-1files-4k.fio  filestat-1jobs-1files-4k.fio_fuse_boc_1G.json  filestat-1jobs-1files-4k.fio_fuse_ext4_1G.json  test  (+9 more)
(+5588 files in other folders)
